5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1684_1103.log
== TEST (2019-04-27 13:01:49) 
-- CODE:
x = float(input("Digite um numero x: "))
y = float(input("Valor 'a' do intervalo fechado [a,b]: "))
z = float(input("Valor 'b' do intervalo fechado [a,b]: "))

if (z > y):
	if (x >= y) and (x <= z):
		print(x, "pertence ao intervalo", y, ",", z)
	else:  
		print(x, "nao pertence ao intervalo", y, ",", z)
else:
	print("Entradas", )

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:03:14) 
-- CODE:
x = float(input("Digite um numero x: "))
y = float(input("Valor 'a' do intervalo fechado [a,b]: "))
z = float(input("Valor 'b' do intervalo fechado [a,b]: "))

if (z > y):
	if (x >= y) and (x <= z):
		print(x, "pertence ao intervalo", y, ",", z)
	else:  
		print(x, "nao pertence ao intervalo", y, ",", z)
else:
	print("Entradas", y, "e", z, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:03:18) 
-- CODE:
x = float(input("Digite um numero x: "))
y = float(input("Valor 'a' do intervalo fechado [a,b]: "))
z = float(input("Valor 'b' do intervalo fechado [a,b]: "))

if (z > y):
	if (x >= y) and (x <= z):
		print(x, "pertence ao intervalo", y, ",", z)
	else:  
		print(x, "nao pertence ao intervalo", y, ",", z)
else:
	print("Entradas", y, "e", z, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:03:28) 
-- CODE:
x = float(input("Digite um numero x: "))
y = float(input("Valor 'a' do intervalo fechado [a,b]: "))
z = float(input("Valor 'b' do intervalo fechado [a,b]: "))

if (z > y):
	if (x >= y) and (x <= z):
		print(x, "pertence ao intervalo", y, ",", z)
	else:  
		print(x, "nao pertence ao intervalo", y, ",", z)
else:
	print("Entradas", y, "e", z, "invalidas")

-- EXECUTION TIME:
0.198458
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:05:42) 
-- CODE:
x = float(input("Digite um numero x: "))
y = float(input("Valor 'a' do intervalo fechado [a,b]: "))
z = float(input("Valor 'b' do intervalo fechado [a,b]: "))

if (z > y):
	if (x >= y) and (x <= z):
		print(x, "pertence ao intervalo", y, ",", z)
	else:  
		print(x, "nao pertence ao intervalo", y, ",",
-- ERROR:
File "XXXX", line 10
    
                                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
